fix: Normalize string for shelf names, add rule to wrap pre elements
Add capital letter and spaces between the separate words of the shelf names.
ie., "currentlyReading" became "Currently Reading"

Add style rule to force text held in <pre> tag to wrap around to the new line if it overflows it's container

--- a/src/App.css
+++ b/src/App.css
@@ -98,13 +98,13 @@ body, .app {
 
 /* books grid */
 
-#currentlyReading:after {
+#currentlyReading {
     content: 'Currently Reading';
 }
-#wantToRead:after {
+#wantToRead {
     content: 'Want to Read';
 }
-#read:after {
+#read {
     content: 'Read';
 }
 ol {
@@ -184,4 +184,7 @@ ol {
     padding: 20px 10px 0;
     text-align: center;
     font-size: 0.8em;
+}
+pre {
+    white-space: pre-wrap;
 }
